# bakec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shaders/: ao_step0.comp  ao_step1.comp  ao_step2.comp  bentnormals_step1.comp  bentnormals_step2.comp  common.sh  heights.comp  meshmapping.comp  meshmapping_nobackfaces.comp  normals.comp  positions.comp  tangentspace.comp  thick_step1.comp  thick_step2.comp
src/: compute.cpp  compute.h  computeshaders.cpp  computeshaders.h  fornos.cpp  image.cpp  meshmapping.cpp  meshmapping.h  solver_ao.cpp  solver_ao.h
