cmake_minimum_required( VERSION 3.0 )
project( bakec )
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory( 3rdparty )
include( 3rdparty/bgfx.cmake/cmake/util/ConfigureDebugging.cmake )
file( GLOB $SRC_FILES RELATIVE ${CMAKE_SOURCE_DIR} src/*.cpp src/*.h )
add_executable( bakec STATIC $SRC_FILES )
target_link_libraries( bakec PUBLIC bx bgfx bimg glfw imgui )
#target_include_directories( bakec PUBLIC include )
